# prompt-to-primitives

./: .env.example  .gitignore  README.md  pyproject.toml
config/: robot.yaml  skill_decomposer_prompts.yaml  tagger_prompts.yaml  task_parser_prompts.yaml
ptp/camera/: __init__.py  base_camera.py  camera_utils.py  realsense_camera.py
ptp/grasp/: __init__.py  grasp_planner.py
ptp/kinematics/: __init__.py  b1_z1_system.py  b1_z1_transform_calculator.py  base_pybullet_interface.py  depth_environment_collider.py  gripper_orientations.py  stretch_pybullet_interface.py  xarm_pybullet_interface.py  xarm_pybullet_planned_primitives.py  xarm_robot_adapter.py
ptp/kinematics/sim/: __init__.py  pybullet_camera.py  pybullet_primitives.py  robocasa_camera.py  scene_environment.py  stretch_pybullet_primitives.py  transform_calculator.py  xarm_pybullet_primitives.py
ptp/llm_interface/: __init__.py  google_genai.py  openai_client.py  qwen3vl.py
ptp/perception/: __init__.py  molmo_client.py  molmo_point_detector.py  object_registry.py  pointing_prompts.py  sam3d_meshifier.py  surface_normal.py
ptp/perception/gsam2/: __init__.py  gsam2_tracker.py  tracker.py
ptp/perception/utils/: __init__.py  coordinates.py
ptp/primitives/: __init__.py  decomposer.py  executor.py  library.py  snapshot_utils.py  task_parser.py  types.py
ptp/utils/: logging_utils.py
scripts/: debug_perception.py  molmo_server.py  run_ptp.py  sam3d_server.py  start_sam3d_servers.sh  test_gripper_orientations.py  test_molmo_pointing.py  test_sam3d.py  visualize_grasps.py
(+2 files in other folders)
