[project]
name = "ptp"
version = "0.1.0"
description = "Prompt-to-Primitives: natural language → atomic manipulation primitives"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "open3d>=0.18.0",
    "pybullet>=3.2.7",
    "openai>=1.0.0",
    "google-genai>=0.1.0",
    "google-generativeai>=0.3.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.57.1",
    "accelerate>=0.34.0",
    "einops>=0.7.0",
    "bitsandbytes==0.49.2",
    "sam2>=1.0.0",
    "supervision>=0.22.0",
    "pyrealsense2>=2.55.0",
    "xarm-python-sdk>=1.17.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ptp*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
